chore: integrate error prone (#142)
* chore: update nullability plugin dependencies

* chore: integrate error prone

* feat: enhance gRPC client functionality and improve code documentation

* feat: refactor gRPC components and enhance error handling with Optional

* fix: lint

* chore: add NullAway suppression annotations and refactor tests for improved nullability and readability

* fix: update validation error message assertion to match new format